@@ -1,3 +1,15 @@
+2012-10-10  Rob Buis  <rbuis@rim.com>
+
+        [BlackBerry] Adapt to new image for search-cancel
+        https://bugs.webkit.org/show_bug.cgi?id=98954
+
+        Reviewed by Antonio Gomes.
+
+        The new image for search-cancel is bigger than the old one, so invert the scaling.
+
+        * platform/blackberry/RenderThemeBlackBerry.cpp:
+        (WebCore::RenderThemeBlackBerry::adjustSearchFieldCancelButtonStyle):
+
 2012-10-10  Tony Chang  <tony@chromium.org>
 
         Unreviewed, another speculative fix for Qt Win.
